Fix deploy.yml for correct directory and artifact path
Updated deployment workflow to specify working directory and correct artifact path.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./pixel-portfolio # <-- This tells GitHub to go inside your folder first!
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -21,7 +24,7 @@ jobs:
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./pixel-portfolio/dist # <-- This grabs the final build from the correct folder
 
   deploy:
     environment:
